[metadata]
name = via-node
description = Add a short description here!
author = SVO
author_email = svo@qual.is
license = MIT
license_files = LICENSE.txt
long_description = file: README.rst
long_description_content_type = text/x-rst; charset=UTF-8
url = https://github.com/pyscaffold/pyscaffold/
project_urls =
    Documentation = https://pyscaffold.org/

platforms = any

classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python

[options]
zip_safe = False
packages = find_namespace:
include_package_data = True
package_dir =
    = src
    resources = resources

python_requires = >=3.11

install_requires =
    click
    fastapi
    fastapi-health
    lagom
    pydantic-settings
    python-arango>=7.5.0
    uvicorn[standard]

[options.packages.find]
where = src
exclude =
    tests

[options.extras_require]
testing =
    assertpy
    bandit
    black
    flake8
    flake8-bugbear
    flake8-typing-imports
    httpx
    mypy
    pep8-naming
    pip-audit
    pytest
    pytest-archon
    pytest-benchmark
    pytest-cov
    pytest-mock
    pytest-order
    pytest-random-order
    pytest-testmon
    pytest-watch
    semgrep
    setuptools
    xenon

[options.entry_points]
console_scripts =
    via-node = via_node.interface.cli.main:cli

[tool:pytest]
addopts =
    --verbose
    -m "not benchmark"
norecursedirs =
    .tox
    .vagrant
    build
    dist
testpaths = tests

filterwarnings =
    ignore:Deprecated call to \`pkg_resources.declare_namespace:DeprecationWarning

markers =
    integration: integration tests
    benchmark: performance benchmark tests

[devpi:upload]
no_vcs = 1
formats = bdist_wheel

[flake8]
max_line_length = 140
extend_ignore = E203, W503, B008
exclude =
    .tox
    build
    dist
    .eggs
    docs/conf.py

[pyscaffold]
version = 4.4.1
package = via_node
